# pressco21

./: .gitignore  .mcp.json  AGENTS.md  AI_SYNC.md  CLAUDE.md  CSS-DESIGN-GUIDE.md  HARNESS.md  OPS_STATE.md  README.md  ROADMAP.md  company-profile.md  company-staff-profiles.md  shrimp-rules.md  수정본_적용_가이드.md
docs/: PRD.md  (+59 more)
mcp-servers/naver-ads-mcp/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-servers/naver-ads-mcp/n8n-workflows/: F14-naver-sa-daily.json
mcp-servers/naver-ads-mcp/src/naver_ads_mcp/: __init__.py  api.py  config.py  errors.py  server.py
mcp-servers/naver-ads-mcp/src/naver_ads_mcp/auth/: __init__.py  commerce.py  searchad.py
mcp-servers/naver-ads-mcp/src/naver_ads_mcp/clients/: commerce.py  datalab.py  searchad.py
mcp-servers/naver-ads-mcp/src/naver_ads_mcp/models/: ad.py  adgroup.py  campaign.py  commerce.py  keyword.py  stat.py
mcp-servers/naver-ads-mcp/src/naver_ads_mcp/tools/: ab_test.py  ad_copy.py  adgroups.py  ads.py  bid_estimate.py  budget.py  bulk_auto.py  bulk_ops.py  campaigns.py  commerce.py  keyword_discover.py  keyword_trend.py  keywords.py  landing_audit.py  master_report.py  negative_keywords.py  quality.py  shopping.py  stats.py
mcp-servers/naver-ads-mcp/src/naver_ads_mcp/utils/: audit_log.py  pii.py  rate_limit.py
mcp-servers/naver-ads-mcp/tests/unit/: test_api.py  test_auth_commerce.py  test_auth_searchad.py  test_bid_estimate.py  test_budget.py  test_bulk_ops.py  test_errors.py  test_keyword_discover.py  test_negative_keywords.py  test_p2_tools.py  test_pii.py  test_quality.py
(+2316 files in other folders)
