[project]
name = "naver-ads-mcp"
version = "0.1.0"
description = "MCP server for Naver Search Ads + Commerce + DataLab APIs"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "PRESSCO21", email = "jiho5755@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "aiolimiter>=1.2.1",
    "structlog>=25.1.0",
    "bcrypt>=4.3.0",
]

[project.scripts]
naver-ads-mcp = "naver_ads_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/naver_ads_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]
